<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ticket_shape">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="30">

                    <ImageView
                        android:id="@+id/ticket_photo_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="2dp"
                        />

                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/ticket_identity_text_view"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:gravity="center"
                        android:textAlignment="center"

                        />

                    <ImageView
                        android:id="@+id/ticket_delete_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@mipmap/delete_icon" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:orientation="vertical">

                    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ticket_fragment_layout_inner"
                        android:orientation="horizontal"
                        tools:context="br.ufrj.ct.restauranteuniversitario.TicketFragment">

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="10pt"
                            android:maxLines="1"
                            android:layout_centerHorizontal="true"
                            android:text="@string/ticket_main_label"
                            android:layout_alignParentTop="true" />

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:layout_centerHorizontal="true"
                            android:textColor="#FFFFFF"
                            android:textSize="10pt"
                            android:text="@string/ticket_main_sublabel"
                            android:layout_below="@+id/textView"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="5pt"
                        android:layout_marginLeft="10dp"
                        android:text="@string/ticket_date_allocated_label"
                        android:layout_marginTop="10dp" />

                    <me.grantland.widget.AutofitTextView
                        android:maxLines="1"
                        android:id="@+id/ticket_date_allocated_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="15pt" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="5pt"
                        android:text="@string/ticket_attendance_label" />

                    <me.grantland.widget.AutofitTextView
                        android:maxLines="1"
                        android:id="@+id/ticket_attendance_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#FFFFFF"
                        android:textSize="15pt" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/ticket_QRCode_image_view"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
